# arm-linux-onvif-server-and-client-code-project

./: CMakeLists-x86.txt  CMakeLists.txt  README.md  common.h  dom.c  main_client.c  main_server.c  make-arm.sh  onvif_server_interface.c  soapClient.c  soapServer.c  soapStub.h  stdsoap2.c  stdsoap2.h  wsdd.nsmap
third-lib/openssl-1.1.1/lib/: libcrypto.so.1.1
third-lib/openssl-1.1.1/lib/pkgconfig/: libcrypto.pc  libssl.pc  openssl.pc
